rokomari header update

--- a/index.html
+++ b/index.html
@@ -5,17 +5,49 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
-    <title>Rokomari Book Section Container</title>
+    <title>Buy Book Online - Best Online Book Shop in Bangladesh | Rokomari.com</title>
 </head>
 <body>
+
+    <div class="top-slider">
+        <div class="image">
+            <img src="images/sliders/top.jpg" alt="">
+        </div>
+    </div>
+
+
+<header>
+
+    <div class="header-container">
+
+        <div class="upper-container">
+          <div class="upper-box">
+            
+            <div class="upper-row">
+                    <img src="images/icons/logo.png" alt="rokomari.com logo">
+                   <input type="text" name="" id="search-field" placeholder="Search by Authors ( ex. চমক হাসান, J. K. Rowling)">
+                    <!-- <img src="" alt=""> -->
+                </div>
+            <div class="upper-row cart">
+                    <img src="images/icons/vector7.svg" alt="">
+                    <a class="sign-in" href="">Sign In</a>
+                </div>
+
+            </div>
+
+          </div>
+
+        </div>
+    </div>
+</header>
+
+
     
     <div class="slider">
         <div class="slider-image">
             <img src="images/sliders/slider3.jpg" alt="">
         </div>
     </div>
-
-
 
                   <!-- Recently Sold Products -->
 
