--- a/index.html
+++ b/index.html
@@ -176,33 +176,129 @@
     </div>
 </section>
 
+<section>
+    <div class="fair-container">
 
-    <div class="book-fair-image">
-        <img src="images/sliders/book fair award.svg" alt="">
-    </div>
-
-
-<div class="fair-container">
-
-    <div class="award-box-container">
-
-        <div class="award-box">
-            <h2>Digital Marketing</h2>
-              <div class="type-button">
-                  <a href="">Book</a>
-                  <a href="">Writter</a>
-              </div>
-            
-            <div class="fair-button">
-                <a href="#" class="view-all-book">View All</a></p>
+        <div class="book-fair-image">
+            <img src="images/sliders/book fair award.svg" alt="">
         </div>
+        
+                     <!-- book fair box 1 -->
+
+        <div class="award-box-container">
+            <div class="award-box">
+                <img src="images/icons/fiction-book-logo.png" alt="">
+
+                <div class="middle-box">
+                      <a class="type-button" href="">বই</a>
+                      <a class="type-button right-type-bttn" href="">লেখক</a>
+
+                        <div class="selector-bg">
+                           <select name="" id="all-in-books">
+                            <option value="All Fiction Books" class="all-option">All Fiction Books</option>
+                           </select>
+                           <a class="today-button today-bottom" href="">TODAY</a>
+                           <a class="today-button" href="">ALL</a>
+                        </div>
+                        <div class="award-details">
+                     <div class="book-list">
+                         <img src="images/books/fair1.jpg" alt=""><br>
+                         <img src="images/books/fair2.jpg" alt=""><br>
+                         <img src="images/books/fair3.jpg" alt="">
+                     </div>
+                     <div class="book-list">
+                         <p>ফ্রিল্যান্সিং : হালাল ইনকামের খোঁজে
+                            <span>মোঃ নূরুল্লাহ হোসাইন</span> </p>
+                         <p>ফ্রিল্যান্সিং : হালাল ইনকামের খোঁজে
+                            <span>মোঃ নূরুল্লাহ হোসাইন </span> </p>
+                         <p>ফ্রিল্যান্সিং : হালাল ইনকামের খোঁজে
+                            <span>মোঃ নূরুল্লাহ হোসাইন</span> </p>
+                    </div></div>
+                   <div class="fair-button">
+                    <a href="#" class="view-all-book">View All</a></p>
+                  </div>
+                </div>
+            </div>
+
+                     <!-- book fair box 2 -->
+
+        <div class="award-box-container">
+            <div class="award-box award-box2">
+                <img src="images/icons/non_fiction.png" alt="">
+
+                <div class="middle-box">
+                      <a class="type-button type-button2" href="">বই</a>
+                      <a class="type-button right-type-bttn" href="">লেখক</a>
+
+                        <div class="selector-bg selector-bg2">
+                           <select name="" id="all-in-books">
+                            <option value="All Fiction Books" class="all-option">All Fiction Books</option>
+                           </select>
+                           <a class="today-button today-bottom" href="">TODAY</a>
+                           <a class="today-button" href="">ALL</a>
+                        </div>
+                        <div class="award-details">
+                     <div class="book-list">
+                        <img src="images/books/fair1.jpg" alt=""><br>
+                        <img src="images/books/fair2.jpg" alt=""><br>
+                        <img src="images/books/fair3.jpg" alt="">
+                     </div>
+                     <div class="book-list">
+                         <p>ফ্রিল্যান্সিং : হালাল ইনকামের খোঁজে
+                            <span>মোঃ নূরুল্লাহ হোসাইন</span> </p>
+                         <p>ফ্রিল্যান্সিং : হালাল ইনকামের খোঁজে
+                            <span>মোঃ নূরুল্লাহ হোসাইন </span> </p>
+                         <p>ফ্রিল্যান্সিং : হালাল ইনকামের খোঁজে
+                            <span>মোঃ নূরুল্লাহ হোসাইন</span> </p>
+                    </div></div>
+                   <div class="fair-button">
+                    <a href="#" class="view-all-book">View All</a></p>
+                  </div>
+                </div>
+            </div>
+
+                     <!-- book fair box 3 -->
+
+                    <div class="award-box-container">
+            <div class="award-box">
+                <img id="dhormio-book" src="images/icons/dhormio.png" alt="">
+
+                <div class="middle-box">
+                      <a class="type-button" href="">বই</a>
+                      <a class="type-button right-type-bttn" href="">লেখক</a>
+
+                        <div class="selector-bg">
+                           <select name="" id="all-in-books">
+                            <option value="All Fiction Books" class="all-option">All Fiction Books</option>
+                           </select>
+                           <a class="today-button today-bottom" href="">TODAY</a>
+                           <a class="today-button" href="">ALL</a>
+                        </div>
+                        <div class="award-details">
+                     <div class="book-list">
+                        <img src="images/books/fair1.jpg" alt=""><br>
+                        <img src="images/books/fair2.jpg" alt=""><br>
+                        <img src="images/books/fair3.jpg" alt="">
+                     </div>
+                     <div class="book-list">
+                         <p>ফ্রিল্যান্সিং : হালাল ইনকামের খোঁজে
+                            <span>মোঃ নূরুল্লাহ হোসাইন</span> </p>
+                         <p>ফ্রিল্যান্সিং : হালাল ইনকামের খোঁজে
+                            <span>মোঃ নূরুল্লাহ হোসাইন </span> </p>
+                         <p>ফ্রিল্যান্সিং : হালাল ইনকামের খোঁজে
+                            <span>মোঃ নূরুল্লাহ হোসাইন</span> </p>
+                    </div></div>
+                   <div class="fair-button">
+                    <a href="#" class="view-all-book">View All</a></p>
+                  </div>
+                </div>
+            </div>
+
         </div>
-
-
-    </div>
-
+     </div>
 </div>
-
+</div>
+</section>
 
 
                   <!-- Custome Category -->
