--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 
        <div class="slider">
         <div class="slider-image">
-            <img src="images/sliders/slider3.jpg" alt="">
+            <img src="images/sliders/slider3.png" alt="">
         </div>
        </div>
  
